packages/errors/tests/fixtures/resolver.ts

import { JsonqlResolverAppError } from '../../src'

export default function() {
  throw new JsonqlResolverAppError('Dummy', {'data': "something"})
}
